--- a/EmployeeManager/MainWindow.xaml
+++ b/EmployeeManager/MainWindow.xaml
@@ -1,28 +1,77 @@
 ﻿<Window x:Class="EmployeeManager.MainWindow"
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-        Title="Управление сотрудниками" Height="600" Width="400">
+        Title="Employee Manager" Height="600" Width="600"
+        Background="#F0F0F0">
     <Grid Margin="10">
-        <Label Content="Имя:" HorizontalAlignment="Left" VerticalAlignment="Top"/>
-        <TextBox x:Name="txtName" HorizontalAlignment="Left" VerticalAlignment="Top" Width="200" Margin="0,20,0,0"/>
+        <StackPanel>
+            <TextBlock Text="Поиск сотрудника" FontWeight="Bold" FontSize="16" Margin="0,0,0,10"/>
+            <StackPanel Orientation="Horizontal" Margin="0,0,0,10">
+                <TextBox x:Name="txtSearch" Height="30" VerticalAlignment="Top" 
+                         BorderThickness="1" Padding="5" Width="200" 
+                         GotFocus="OnTextBoxGotFocus" Text="Поиск..."/>
+                <Button Content="Поиск" Click="SearchButton_Click" Width="75" Margin="5,0,0,0"/>
+            </StackPanel>
 
-        <Label Content="Должность:" HorizontalAlignment="Left" VerticalAlignment="Top" Margin="0,50,0,0"/>
-        <TextBox x:Name="txtPosition" HorizontalAlignment="Left" VerticalAlignment="Top" Width="200" Margin="0,70,0,0"/>
+            <Button Content="Добавить Сотрудника" Click="ShowAddEmployeeBlock" Width="200" Margin="0,0,0,10"/>
+            <Button Content="Добавить Менеджера" Click="ShowAddManagerBlock" Width="200" Margin="0,0,0,10"/>
+            <Button Content="Изменить Зарплату" Click="ShowChangeSalaryBlock" Width="200" Margin="0,0,0,10"/>
+            <Button Content="Обновить Данные" Click="RefreshData" Width="200" Margin="0,0,0,10"/>
+            <Button Content="Очистить Данные" Click="ClearData" Width="200" Margin="0,0,0,10"/>
 
-        <Label Content="Зарплата:" HorizontalAlignment="Left" VerticalAlignment="Top" Margin="0,100,0,0"/>
-        <TextBox x:Name="txtSalary" HorizontalAlignment="Left" VerticalAlignment="Top" Width="200" Margin="0,120,0,0"/>
+            <StackPanel x:Name="AddEmployeePanel" Visibility="Collapsed" Margin="0,10,0,0">
+                <TextBlock Text="Добавление Сотрудника" FontWeight="Bold"/>
+                <TextBox x:Name="txtEmployeeLastName" Width="200" GotFocus="OnTextBoxGotFocus" Text="Фамилия"/>
+                <TextBox x:Name="txtEmployeeFirstName" Width="200" GotFocus="OnTextBoxGotFocus" Text="Имя"/>
+                <TextBox x:Name="txtEmployeeMiddleName" Width="200" GotFocus="OnTextBoxGotFocus" Text="Отчество"/>
 
-        <Button Content="Добавить сотрудника" HorizontalAlignment="Left" VerticalAlignment="Top" Width="200" Margin="0,150,0,0" Click="btnAddEmployee_Click"/>
+                <TextBox x:Name="txtEmployeePosition" Width="200" GotFocus="OnTextBoxGotFocus" Text="Должность"/>
+                <TextBox x:Name="txtEmployeeSalary" Width="200" GotFocus="OnTextBoxGotFocus" Text="Зарплата"/>
+                <TextBox x:Name="txtEmployeeBonus" Width="200" GotFocus="OnTextBoxGotFocus" Text="Бонус"/>
+                <Button Content="Добавить" Click="AddEmployeeButton_Click" Width="200"/>
+            </StackPanel>
 
-        <Label Content="Процент увеличения:" HorizontalAlignment="Left" VerticalAlignment="Top" Margin="0,190,0,0"/>
-        <TextBox x:Name="txtIncreasePercentage" HorizontalAlignment="Left" VerticalAlignment="Top" Width="200" Margin="0,210,0,0"/>
+            <StackPanel x:Name="AddManagerPanel" Visibility="Collapsed" Margin="0,10,0,0">
+                <TextBlock Text="Добавление Менеджера" FontWeight="Bold"/>
+                <TextBox x:Name="txtManagerLastName" Width="200" GotFocus="OnTextBoxGotFocus" Text="Фамилия"/>
+                <TextBox x:Name="txtManagerFirstName" Width="200" GotFocus="OnTextBoxGotFocus" Text="Имя"/>
+                <TextBox x:Name="txtManagerMiddleName" Width="200" GotFocus="OnTextBoxGotFocus" Text="Отчество"/>
+                <TextBox x:Name="txtManagerPosition" Width="200" GotFocus="OnTextBoxGotFocus" Text="Должность"/>
+                <TextBox x:Name="txtManagerSalary" Width="200" GotFocus="OnTextBoxGotFocus" Text="Зарплата"/>
+                <TextBox x:Name="txtManagerBonus" Width="200" GotFocus="OnTextBoxGotFocus" Text="Бонус"/>
+                <Button Content="Добавить" Click="AddManagerButton_Click" Width="200"/>
+            </StackPanel>
 
-        <Button Content="Увеличить зарплату" HorizontalAlignment="Left" VerticalAlignment="Top" Width="200" Margin="0,240,0,0" Click="btnIncreaseSalary_Click"/>
+            <StackPanel x:Name="ChangeSalaryPanel" Visibility="Collapsed" Margin="0,10,0,0">
+                <TextBlock Text="Изменение зарплаты" FontWeight="Bold"/>
+                <TextBox x:Name="txtChangeSalaryLastName" Width="200" GotFocus="OnTextBoxGotFocus" Text="Фамилия"/>
+                <TextBox x:Name="txtChangeSalaryFirstName" Width="200" GotFocus="OnTextBoxGotFocus" Text="Имя"/>
+                <TextBox x:Name="txtChangeSalaryMiddleName" Width="200" GotFocus="OnTextBoxGotFocus" Text="Отчество"/>
+                <TextBox x:Name="txtChangeSalaryPercentage" Width="200" GotFocus="OnTextBoxGotFocus" Text="Процент увеличения зарплаты"/>
+                <TextBox x:Name="txtChangeBonusPercentage" Width="200" GotFocus="OnTextBoxGotFocus" Text="Процент увеличения бонуса"/>
+                <Button Content="Применить" Click="ChangeSalaryButton_Click" Width="200"/>
+            </StackPanel>
 
-        <ListBox x:Name="lstEmployees" HorizontalAlignment="Left" VerticalAlignment="Top" Width="360" Height="150" Margin="0,280,0,0"/>
+            <!-- DataGrid для отображения данных сотрудников -->
+            <DataGrid x:Name="employeeDataGrid" AutoGenerateColumns="False" Margin="0,10,0,0" 
+                      Height="200" IsReadOnly="True">
+                <DataGrid.Columns>
+                    <DataGridTextColumn Header="Фамилия" Binding="{Binding LastName}" Width="*"/>
+                    <DataGridTextColumn Header="Имя" Binding="{Binding FirstName}" Width="*"/>
+                    <DataGridTextColumn Header="Отчество" Binding="{Binding MiddleName}" Width="*"/>
+                    <DataGridTextColumn Header="Должность" Binding="{Binding Position}" Width="*"/>
+                    <DataGridTextColumn Header="Зарплата" Binding="{Binding Salary, StringFormat='{}{0:C}', ConverterCulture='ru-RU'}" Width="*"/>
+                    <DataGridTextColumn Header="Бонус" Binding="{Binding Bonus, StringFormat='{}{0:C}', ConverterCulture='ru-RU'}" Width="*"/>
+                </DataGrid.Columns>
+            </DataGrid>
 
-        <Button Content="Показать зарплату" HorizontalAlignment="Left" VerticalAlignment="Top" Width="200" Margin="0,450,0,0" Click="btnShowSalary_Click"/>
-        <Button Content="Изменить зарплату" HorizontalAlignment="Left" VerticalAlignment="Top" Width="200" Margin="0,480,0,0" Click="btnChangeSalary_Click"/>
+            <!-- Индикатор загрузки -->
+            <StackPanel x:Name="LoadingPanel" Visibility="Collapsed" HorizontalAlignment="Center" VerticalAlignment="Center">
+                <TextBlock Text="Загрузка данных, пожалуйста, подождите..." FontWeight="Bold" Margin="0,0,0,10"/>
+                <ProgressBar IsIndeterminate="True" Width="200" Height="30"/>
+            </StackPanel>
+        </StackPanel>
+
     </Grid>
 </Window>
 
